
0.9.9l May 27, 2005
 * updated translations
 * updated example.slapt-getrc

0.9.9k May 18, 2005
 * added pkg_err_t typedef and api for error handling (libslapt)
   updated transaction code to show conflict and missing dependency
   notifications during the transaction handler.
 * fixed regression in slack-required file
 * code formatting updates
 * fixed a few warnings for gcc 4.0 support
 * added missing strings to translations, updated translations, added
   French translation by Verachten Bruno
 * give more notification when package sources fail to download
 * updated example.slapt-getrc with additional package sources
 * added exclude for x86_64 packages
 * removed unneeded strings from translations
 * removed hard limits on package name, version, location, and description,
   fixing issue with greater than limit location in installed package causing
   double free bug.  thanks to JP (jp dot guillemin at free dot fr) for the
   bug report.
 * when parsing meta entry for w/o conditionals, return newest installed version
   instead of newest available by default, fall back to newest available other-
   wise.
 * free locally created pkg list in purge_old_cached_pkgs()
 * added libcurl option CURLOPT_FOLLOWLOCATION so HTTP redirects are followed
 * initialized source in sources list [fixing valgrind warning]
 * updated FAQ

0.9.9j Apr 17, 2005
 * updated example.slapt-getrc
 * correctly set free_pkgs in pkg_lists within init_transaction and checked for
   it in free_transaction
 * use -fpic for library creation
 * updated withlibslapt make target 
 * added generate_suggestions() so that suggestions are properly detected
   after transaction has been created instead of checking multiple times
   if possible suggestions are present in the current transaction
 * fixed ignoring suggestion when there was only one suggestion
 * added copy_pkg() to package.[ch] instead of using memcpy() in the transaction