@@ -576,36 +576,51 @@ transaction_t *remove_from_transaction(transaction_t *tran,pkg_info_t *pkg)
   init_transaction(new_tran);
 
   for (i = 0;i < tran->install_pkgs->pkg_count; i++) {
+
     if (
-      strcmp(pkg->name,tran->install_pkgs->pkgs[i]->name) != 0 &&
-      strcmp(pkg->version,tran->install_pkgs->pkgs[i]->version) != 0 &&
-      strcmp(pkg->location,tran->install_pkgs->pkgs[i]->location) != 0
-    ) add_install_to_transaction(new_tran,tran->install_pkgs->pkgs[i]);
+      strcmp(pkg->name,tran->install_pkgs->pkgs[i]->name) == 0 &&
+      strcmp(pkg->version,tran->install_pkgs->pkgs[i]->version) == 0 &&
+      strcmp(pkg->location,tran->install_pkgs->pkgs[i]->location) == 0
+    ) continue;
+
+    add_install_to_transaction(new_tran,tran->install_pkgs->pkgs[i]);
   }
+
   for (i = 0;i < tran->remove_pkgs->pkg_count; i++) {
+
     if (
-      strcmp(pkg->name,tran->remove_pkgs->pkgs[i]->name) != 0 &&
-      strcmp(pkg->version,tran->remove_pkgs->pkgs[i]->version) != 0 &&
-      strcmp(pkg->location,tran->remove_pkgs->pkgs[i]->location) != 0
-    ) add_remove_to_transaction(new_tran,tran->remove_pkgs->pkgs[i]);
+      strcmp(pkg->name,tran->remove_pkgs->pkgs[i]->name) == 0 &&
+      strcmp(pkg->version,tran->remove_pkgs->pkgs[i]->version) == 0 &&
+      strcmp(pkg->location,tran->remove_pkgs->pkgs[i]->location) == 0
+    ) continue;
+
+    add_remove_to_transaction(new_tran,tran->remove_pkgs->pkgs[i]);
   }
+
   for (i = 0;i < tran->upgrade_pkgs->pkg_count; i++) {
+
     if (
-      strcmp(pkg->name,tran->upgrade_pkgs->pkgs[i]->upgrade->name) != 0 &&
-      strcmp(pkg->version,tran->upgrade_pkgs->pkgs[i]->upgrade->version) != 0 &&
-      strcmp(pkg->location,tran->upgrade_pkgs->pkgs[i]->upgrade->location) != 0
-    ) add_upgrade_to_transaction(
+      strcmp(pkg->name,tran->upgrade_pkgs->pkgs[i]->upgrade->name) == 0 &&
+      strcmp(pkg->version,tran->upgrade_pkgs->pkgs[i]->upgrade->version) == 0 &&
+      strcmp(pkg->location,tran->upgrade_pkgs->pkgs[i]->upgrade->location) == 0
+    ) continue;
+
+    add_upgrade_to_transaction(
       new_tran,
       tran->upgrade_pkgs->pkgs[i]->installed,
       tran->upgrade_pkgs->pkgs[i]->upgrade
     );
   }
+
   for (i = 0; i < tran->exclude_pkgs->pkg_count;i++) {
+
     if (
-      strcmp(pkg->name,tran->exclude_pkgs->pkgs[i]->name) != 0 &&
-      strcmp(pkg->version,tran->exclude_pkgs->pkgs[i]->version) != 0 &&
-      strcmp(pkg->location,tran->exclude_pkgs->pkgs[i]->location) != 0
-    ) add_exclude_to_transaction(new_tran,tran->exclude_pkgs->pkgs[i]);
+      strcmp(pkg->name,tran->exclude_pkgs->pkgs[i]->name) == 0 &&
+      strcmp(pkg->version,tran->exclude_pkgs->pkgs[i]->version) == 0 &&
+      strcmp(pkg->location,tran->exclude_pkgs->pkgs[i]->location) == 0
+    ) continue;
+
+    add_exclude_to_transaction(new_tran,tran->exclude_pkgs->pkgs[i]);
   }
 
   return new_tran;
